[gd_scene load_steps=6 format=3 uid="uid://bi6irt0cqtmy4"]

[ext_resource type="Script" uid="uid://23o8t4fjwiwo" path="res://ui/settings_menu/settings_menu.gd" id="1_kvsec"]
[ext_resource type="Texture2D" uid="uid://d3dfun1kh6yvk" path="res://resources/UI/Settings_menu/setting_bar_container.png" id="2_2adas"]
[ext_resource type="Texture2D" uid="uid://bcdrulroyri3i" path="res://resources/UI/Settings_menu/bg.png" id="2_gjkyi"]
[ext_resource type="Texture2D" uid="uid://dyh80ge2poqfy" path="res://resources/UI/Settings_menu/settings_down_btn.png" id="4_tl6ag"]
[ext_resource type="Texture2D" uid="uid://lxdyucdgik6u" path="res://resources/UI/Settings_menu/settings_up_btn.png" id="5_rnc5y"]

[node name="SettingsMenu" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -523.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kvsec")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 960.0
offset_bottom = 720.0
texture = ExtResource("2_gjkyi")

[node name="VolumeBar" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 332.0
offset_top = 304.0
offset_right = 428.0
offset_bottom = 344.0
scale = Vector2(3, 3)
texture = ExtResource("2_2adas")

[node name="DecreaseVolume" type="Button" parent="."]
layout_mode = 0
offset_left = 236.0
offset_top = 320.0
offset_right = 260.0
offset_bottom = 344.0
scale = Vector2(4, 4)
icon = ExtResource("4_tl6ag")

[node name="IncreaseVolume" type="Button" parent="."]
layout_mode = 0
offset_left = 620.0
offset_top = 320.0
offset_right = 644.0
offset_bottom = 344.0
scale = Vector2(4, 4)
icon = ExtResource("5_rnc5y")

[connection signal="focus_entered" from="DecreaseVolume" to="." method="_on_decrease_volume_focus_entered"]
[connection signal="focus_exited" from="DecreaseVolume" to="." method="_on_decrease_volume_focus_exited"]
[connection signal="mouse_entered" from="DecreaseVolume" to="." method="_on_decrease_volume_mouse_entered"]
[connection signal="mouse_exited" from="DecreaseVolume" to="." method="_on_decrease_volume_mouse_exited"]
